fixed modal background and fixed stretching

--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -160,6 +160,7 @@ li{
 	width: 100%;
 	justify-content: center;
 	padding: 16vh 8vw;
+	position: relative;
 }
 
 @media (min-width: 750px){
